--- a/templates/waste_management/dashboard.html
+++ b/templates/waste_management/dashboard.html
@@ -517,12 +517,12 @@
 
 <script>
 function viewWasteDetails(wasteId) {
-    console.log('View waste details for ID:', wasteId);
+    // View waste details for specified ID
 }
 
 function deleteWaste(wasteId) {
     if (confirm('Are you sure you want to delete this waste record?')) {
-        console.log('Delete waste ID:', wasteId);
+        // Delete waste with specified ID
     }
 }
 
