--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -71,11 +71,7 @@
 if ('serviceWorker' in navigator) {
     navigator.serviceWorker.getRegistrations().then(function(registrations) {
         for (let registration of registrations) {
-            registration.unregister().then(function(success) {
-                if (success) {
-                    console.log('Service worker unregistered on login page');
-                }
-            });
+            registration.unregister();
         }
     });
 }
