--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -150,11 +150,7 @@
 if ('serviceWorker' in navigator) {
     navigator.serviceWorker.getRegistrations().then(function(registrations) {
         for (let registration of registrations) {
-            registration.unregister().then(function(success) {
-                if (success) {
-                    console.log('Service worker unregistered on register page');
-                }
-            });
+            registration.unregister();
         }
     });
 }
