--- a/templates/admin_panel/base.html
+++ b/templates/admin_panel/base.html
@@ -569,10 +569,13 @@
                         <i class="fas fa-external-link-alt"></i>
                         <span>View Site</span>
                     </a>
-                    <a class="nav-link" href="{% url 'accounts:logout' %}" data-tooltip="Logout">
-                        <i class="fas fa-sign-out-alt"></i>
-                        <span>Logout</span>
-                    </a>
+                    <form method="post" action="{% url 'accounts:logout' %}" style="display: inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="nav-link" style="background: none; border: none; cursor: pointer;" data-tooltip="Logout">
+                            <i class="fas fa-sign-out-alt"></i>
+                            <span>Logout</span>
+                        </button>
+                    </form>
                 </div>
             </div>
         </nav>
