--- a/templates/system_admin/base.html
+++ b/templates/system_admin/base.html
@@ -580,10 +580,13 @@
                 </a>
             </li>
             <li>
-                <a href="{% url 'accounts:logout' %}" onclick="return confirm('Are you sure you want to logout?')">
-                    <i class="fas fa-sign-out-alt"></i>
-                    <span>Logout</span>
-                </a>
+                <form method="post" action="{% url 'accounts:logout' %}" style="display: inline;" onsubmit="return confirm('Are you sure you want to logout?')">
+                    {% csrf_token %}
+                    <button type="submit" style="background: none; border: none; padding: 0; cursor: pointer; width: 100%; text-align: left;" class="nav-link-btn">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Logout</span>
+                    </button>
+                </form>
             </li>
         </ul>
     </div>
